Bug 755546: fix incorrect deletion of the sensor observer list in unregistration of one observer. r=cjones